# cedarscript-mcp-server

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: claude_desktop.json  quickstart.md  vscode_mcp.json
planning/: ARCHITECTURE.md  IMPLEMENTATION.md  MAKEFILE_DESIGN.md
src/cedarscript_mcp/: __init__.py  adapters.py  security.py  server.py  tools.py
tests/: conftest.py  test_security.py  test_tools.py
