[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cedarscript-mcp-server"
dynamic = ["version"]
description = "MCP server for AI-assisted code transformations via CEDARScript"
authors = [{ name = "Elifarley", email = "cedarscript@orgecc.com" }]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]
keywords = ["mcp", "model-context-protocol", "cedarscript", "code-editing", "ai-assisted-development"]
dependencies = [
    "cedarscript-editor>=1.0.0",
    "mcp>=1.0.0",
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/CEDARScript/cedarscript-mcp-server"
Documentation = "https://github.com/CEDARScript/cedarscript-mcp-server#readme"
Repository = "https://github.com/CEDARScript/cedarscript-mcp-server.git"
"Bug Tracker" = "https://github.com/CEDARScript/cedarscript-mcp-server/issues"

[project.scripts]
cedarscript-mcp = "cedarscript_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "isort>=5.0",
    "coverage>=6.0",
    "tox>=3.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cedarscript_mcp*"]
namespaces = false

[tool.setuptools_scm]
# To override version:
# >>> SETUPTOOLS_SCM_PRETEND_VERSION=0.0.2 python -m build
# To dry-run and see version:
# >>> python -m setuptools_scm
write_to = "src/cedarscript_mcp/_version.py"
# Append .post{number of commits} to your version if there are commits after the last tag.
version_scheme = "post-release"
# Match tags without 'v' prefix (e.g., 0.1.0 instead of v0.1.0)
tag_regex = "^(?P<version>[0-9]+(?:\\.[0-9]+)*)$"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
